# Discriminase

./: .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  pyproject.toml
data/commensals/: gut_microbiome.csv  gut_microbiome_lab_strains.csv
discriminase/: __init__.py  bktree.py  bktree_cython.pyx  cli.py  config.py  database.py  encoding.py  genome.py  guides.py  index.py  loaders.py  ncbi.py  pack.py  search.py  trie.py
docs/: ARCHITECTURE.md  COMPARISON.md  DEPLOY.md  HOW_IT_WORKS.md
tests/: test_end_to_end.py  test_genome.py  test_index.py  test_pack.py  test_pam.py  test_trie.py
web/: analytics.mjs  app.mjs  build.mjs  config.js  engine.mjs  index.html  ncbi.mjs  store.mjs
web/examples/: gut_microbiome.csv  index.json
