[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discriminase"
version = "0.1.0"
description = "Commensal-sparing CRISPR guide discovery: find guides that hit a target bacterium while sparing the surrounding microbiome."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Owen Loh" }]
keywords = ["CRISPR", "bioinformatics", "guide-rna", "microbiome", "off-target"]
dependencies = [
    "bitarray>=2.8",
    "pydantic>=2.0",
    "biopython>=1.80",
    "certifi",
]

[project.optional-dependencies]
fast = ["cython>=3.0"]
dev = ["pytest>=7.0"]

[project.scripts]
discriminase = "discriminase.cli:main"

[tool.setuptools]
packages = ["discriminase"]

[tool.setuptools.package-data]
discriminase = ["bktree_cython.pyx"]
